Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-3786

Perforce version control runs wrong command.

    XMLWordPrintable

Details

    Description

      Running the "revert" command for the currently open file results in the "diff" operation. The file was unchanged,
      so the diff had no results. It should run "revert."

      PerforcePlugin::revertCurrentFile() appears not to handle this case.

      Perhaps if "result.stdOut.isEmpty()" run "revert -a" on the file and return.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            bargonaut Brad Sandman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes