P4: Allow for reversal of unchanged files

Allow for reversal of unchanged files in perforce: Just close them again.

Task-number: QTCREATORBUG-3786
Change-Id: I52266b9f7d0bbaf3139cf9fd0ee5e3b47e7a3d58
Reviewed-on: http://codereview.qt.nokia.com/2501
Reviewed-by: Tobias Hunger <tobias.hunger@nokia.com>
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>